--- a/test101.html
+++ b/test101.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<audio controls>  
+<audio controls style="width: 500px; height: 50px">  
   <source src="MarineShippingIndustry.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
